# raylib_raygui_rres_template

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  sol.cpp  test.cpp
